--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <form action="https://formspree.io/f/mrgrplje" method="POST" class="loginForm">
         <fieldset>
           <legend>로그인 폼</legend>
-          <div class="loginForm__contaier">
+          <div class="loginForm__container">
             <div class="userEmail">
               <div class="formControl formControlUser">
                 <label for="userEmail" class="a11yHidden formControl__label">아이디</label>
@@ -48,11 +48,11 @@
                 IP 보안
               </a>
               <div class="formControl ipSecurity">
-                <input type="checkbox" aria-label="IP 보안" class="formControl__checkbox" name="ipSecurity" id="ipSecurity">
+                <input type="checkbox" aria-label="IP 보안" class="formControl__checkbox ipSecurityCheckbox" name="ipSecurity" id="ipSecurity">
                 <label for="ipSecurity" class="formControl__label ipSecurityLabel"></label>
               </div>
             </div>
-            <div class="formControl">
+            <div class="formControl loginButton">
               <button type="submit" class="formControl__button buttonLogin">
                 로그인
               </button>
