로그인 상태유지 변경

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
             </div>
             <div class="userSelectInfo">
               <div class="formControl loginState">
-                <input type="checkbox" class="formControl__checkbox" name="loginState" id="loginState">
-                <label for="loginState" class="formControl__label">
-                  <span class="checkboxIr"></span>
+                <input type="checkbox" class="formControl__checkbox loginState__checkbox" name="loginState" id="loginState">
+                <label for="loginState" class="formControl__label loginState__label">
                   로그인 상태유지
                 </label>
               </div>
@@ -48,8 +47,8 @@
                 IP 보안
               </a>
               <div class="formControl ipSecurity">
-                <input type="checkbox" aria-label="IP 보안" class="formControl__checkbox ipSecurityCheckbox" name="ipSecurity" id="ipSecurity">
-                <label for="ipSecurity" class="formControl__label ipSecurityLabel"></label>
+                <input type="checkbox" aria-label="IP 보안" class="formControl__checkbox ipSecurity__checkbox" name="ipSecurity" id="ipSecurity">
+                <label for="ipSecurity" class="formControl__label ipSecurity__label"></label>
               </div>
             </div>
             <div class="formControl loginButton">
